--- a/USNationalsApp/app/src/main/res/values/strings.xml
+++ b/USNationalsApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">USNationals</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_competitor_list">Select a Competitor</string>
+    <string name="loading_competitors">Loading competitors...</string>
 </resources>
