--- a/USNationalsApp/app/src/main/res/values/strings.xml
+++ b/USNationalsApp/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="admin_access_granted">You now have admin access!</string>
     <string name="title_activity_stage_schedule">Schedule</string>
     <string name="action_stage_schedule">View the Schedule</string>
+    <string name="action_cubingusa_link">Competition Website</string>
+    <string name="action_cubecomps_link">Results on Cubecomps</string>
 </resources>
