--- a/scripts/scorecards/newscoresheets.sty
+++ b/scripts/scorecards/newscoresheets.sty
@@ -13,7 +13,7 @@
 \begin{tabular}{|>{\centering\arraybackslash}p{.75in}|>{\centering\arraybackslash}p{2.75in}|>{\centering\arraybackslash}p{.75in}|>{\centering\arraybackslash}p{.75in}|}\hline
 \multicolumn{4}{|c|}{#1}\\
 \hline
-\multirow{2}{*}{Name}&\multicolumn{2}{|c|}{\multirow{2}{*}{\begin{tabular}{c}\multirow{2}{*}{\large{#2}}\\\tiny{#3}\end{tabular}}}&\multirow{2}{*}{\Huge{\textbf{#4}}}\\
+\multirow{2}{*}{#4}&\multicolumn{2}{|c|}{\multirow{2}{*}{\begin{tabular}{c}\multirow{2}{*}{\large{#2}}\\\tiny{#3}\end{tabular}}}&\multirow{2}{*}{\Huge{\textbf{#4}}}\\
 &\multicolumn{2}{|c|}{}&\\
 \hline
 &Solve Time&Judge&Comp\\
