--- a/USNationalsApp/app/src/main/res/values/strings.xml
+++ b/USNationalsApp/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
         Start Time: %1$s %2$s
     </string>
     <string name="successfully_notified">Heat notification sent!</string>
-    <string name="unsuccessful_notification">Failed to notify competitors: %1$s</string>
+    <string name="unsuccessful_notification">Failed: %1$s</string>
     <string name="schedule_option">Schedule</string>
     <string name="results_option">Results</string>
 </resources>
