--- a/USNationalsApp/app/src/main/res/values/strings.xml
+++ b/USNationalsApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">US Nationals 2016</string>
+    <string name="app_name">CubingUSA Nationals 2017</string>
     <string name="title_activity_competitor_list">Select a Competitor</string>
     <string name="subscribed">Subscribed to alerts</string>
     <string name="saved_competitor">Saved competitor as favorite</string>
