--- a/USNationalsApp/app/src/main/res/values/strings.xml
+++ b/USNationalsApp/app/src/main/res/values/strings.xml
@@ -23,21 +23,21 @@
     <string name="action_stage_schedule">View the Schedule</string>
     <string name="action_cubingusa_link">Competition Website</string>
     <string name="action_cubecomps_link">Results on Cubecomps</string>
-    <string name="title_activity_heat_info">Group Info</string>
+    <string name="title_activity_group_info">Group Info</string>
     <string name="competitors_divider">Competitors</string>
     <string name="scramblers_divider">Scramblers</string>
     <string name="runners_divider">Runners</string>
     <string name="judges_divider">Judges</string>
-    <string name="heat_info_header_nonfinal">
+    <string name="group_info_header_nonfinal">
         %1$s Round %2$d - %3$s %4$d
     </string>
-    <string name="heat_info_header_final">
+    <string name="group_info_header_final">
         %1$s Final %2$s Stage Group %3$d
     </string>
-    <string name="heat_info_start_time">
+    <string name="group_info_start_time">
         Start Time: %1$s %2$s
     </string>
-    <string name="successfully_notified">Heat notification sent!</string>
+    <string name="successfully_notified">Group notification sent!</string>
     <string name="unsuccessful_notification">Failed: %1$s</string>
     <string name="schedule_option">Schedule</string>
     <string name="results_option">Results</string>
